@@ -8,6 +8,7 @@ by Alex Rabe & NextGEN DEV Team
 
 = V1.8.2 - soon =
 * Bugfix : Set pagination variables for search result, otherwise update failed
+* Bugfix : Update failed for paged galleries
 
 = V1.8.1 - 18.06.2011 =
 * Bugfix : Special case for pagination, instead of showing page-1, we show the clean url
